// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Radio snapshots matches snapshot for checked radios with helper text 1`] = `
<View
  style={
    [
      {},
      {},
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <View
      accessibilityHint="Helper copy"
      accessibilityLabel="Snapshot radio"
      accessibilityState={
        {
          "busy": undefined,
          "checked": true,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={12}
      id="snap-radio"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="radio"
    >
      <View
        style={
          {
            "alignItems": "center",
            "borderRadius": 10.5,
            "height": 21,
            "justifyContent": "center",
            "opacity": 1,
            "pointerEvents": "none",
            "width": 21,
          }
        }
      >
        <View
          style={
            [
              {
                "borderRadius": 10.5,
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              {
                "backgroundColor": "#8E8E93",
              },
            ]
          }
        />
        <View
          style={
            [
              {
                "borderRadius": 9.5,
                "height": 19,
                "width": 19,
              },
              {
                "backgroundColor": "#FFFFFF",
                "transform": [
                  {
                    "scale": 0.42105263157894735,
                  },
                ],
              },
            ]
          }
        />
      </View>
    </View>
    <View
      accessibilityElementsHidden={true}
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={false}
      collapsable={false}
      focusable={true}
      importantForAccessibility="no-hide-descendants"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "flexShrink": 1,
          },
          {},
        ]
      }
      tabIndex={-1}
    >
      <View
        style={
          {
            "marginBottom": 0,
          }
        }
      >
        <Text
          nativeID="snap-radio-label"
          selectable={true}
          style={
            [
              {
                "color": "#1C1C1E",
                "fontFamily": "-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 22.4,
                "textAlign": "left",
              },
              {},
              [
                {
                  "color": "#1C1C1E",
                  "fontSize": 11,
                  "marginBottom": 0,
                },
                undefined,
              ],
            ]
          }
        >
          Snapshot radio
        </Text>
        <Text
          nativeID="snap-radio-description"
          selectable={true}
          style={
            [
              {
                "color": "#1C1C1E",
                "fontFamily": "-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 22.4,
                "textAlign": "left",
              },
              {},
              {
                "color": "#8E8E93",
                "fontSize": 12,
              },
            ]
          }
        >
          Helper copy
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Radio snapshots matches snapshot for vertical RadioGroup with description and error 1`] = `
<View
  style={
    [
      {
        "width": "100%",
      },
      [
        {},
        {},
        undefined,
      ],
    ]
  }
>
  <View
    style={
      {
        "marginBottom": 4,
      }
    }
  >
    <Text
      nativeID="subscription-label"
      selectable={true}
      style={
        [
          {
            "color": "#1C1C1E",
            "fontFamily": "-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": "600",
            "lineHeight": 22.4,
            "textAlign": "left",
          },
          {},
          {
            "color": "#1C1C1E",
            "fontSize": 13,
            "marginBottom": 0,
          },
        ]
      }
    >
      Subscription
    </Text>
    <Text
      nativeID="subscription-description"
      selectable={true}
      style={
        [
          {
            "color": "#1C1C1E",
            "fontFamily": "-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 22.4,
            "textAlign": "left",
          },
          {},
          {
            "color": "#8E8E93",
            "fontSize": 12,
          },
        ]
      }
    >
      Choose carefully
    </Text>
  </View>
  <View
    accessibilityHint="Selection required. Choose carefully"
    aria-label="Subscription"
    id="subscription"
    role="radiogroup"
    style={
      {
        "flexDirection": "column",
        "gap": 8,
      }
    }
  >
    <View
      style={
        [
          {},
          {},
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <View
          accessibilityLabel="Monthly"
          accessibilityState={
            {
              "busy": undefined,
              "checked": true,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          hitSlop={10}
          id="subscription-option-0"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          role="radio"
        >
          <View
            style={
              {
                "alignItems": "center",
                "borderRadius": 12,
                "height": 24,
                "justifyContent": "center",
                "opacity": 1,
                "pointerEvents": "none",
                "width": 24,
              }
            }
          >
            <View
              style={
                [
                  {
                    "borderRadius": 12,
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  {
                    "backgroundColor": "#8E8E93",
                  },
                ]
              }
            />
            <View
              style={
                [
                  {
                    "borderRadius": 11,
                    "height": 22,
                    "width": 22,
                  },
                  {
                    "backgroundColor": "#FFFFFF",
                    "transform": [
                      {
                        "scale": 0.4545454545454546,
                      },
                    ],
                  },
                ]
              }
            />
          </View>
        </View>
        <View
          accessibilityElementsHidden={true}
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={false}
          collapsable={false}
          focusable={true}
          importantForAccessibility="no-hide-descendants"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "flexShrink": 1,
              },
              {},
            ]
          }
          tabIndex={-1}
        >
          <View
            style={
              {
                "marginBottom": 0,
              }
            }
          >
            <Text
              nativeID="subscription-option-0-label"
              selectable={true}
              style={
                [
                  {
                    "color": "#1C1C1E",
                    "fontFamily": "-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 22.4,
                    "textAlign": "left",
                  },
                  {},
                  [
                    {
                      "color": "#1C1C1E",
                      "fontSize": 13,
                      "marginBottom": 0,
                    },
                    undefined,
                  ],
                ]
              }
            >
              Monthly
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        [
          {},
          {},
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "flex-start",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <View
          accessibilityHint="Best value"
          accessibilityLabel="Yearly"
          accessibilityState={
            {
              "busy": undefined,
              "checked": false,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          hitSlop={10}
          id="subscription-option-1"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          role="radio"
        >
          <View
            style={
              {
                "alignItems": "center",
                "borderRadius": 12,
                "height": 24,
                "justifyContent": "center",
                "opacity": 1,
                "pointerEvents": "none",
                "width": 24,
              }
            }
          >
            <View
              style={
                [
                  {
                    "borderRadius": 12,
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  {
                    "backgroundColor": "#8E8E93",
                  },
                ]
              }
            />
            <View
              style={
                [
                  {
                    "borderRadius": 11,
                    "height": 22,
                    "width": 22,
                  },
                  {
                    "backgroundColor": "#FFFFFF",
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                  },
                ]
              }
            />
          </View>
        </View>
        <View
          accessibilityElementsHidden={true}
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={false}
          collapsable={false}
          focusable={true}
          importantForAccessibility="no-hide-descendants"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "flexShrink": 1,
              },
              {},
            ]
          }
          tabIndex={-1}
        >
          <View
            style={
              {
                "marginBottom": 0,
              }
            }
          >
            <Text
              nativeID="subscription-option-1-label"
              selectable={true}
              style={
                [
                  {
                    "color": "#1C1C1E",
                    "fontFamily": "-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 22.4,
                    "textAlign": "left",
                  },
                  {},
                  [
                    {
                      "color": "#1C1C1E",
                      "fontSize": 13,
                      "marginBottom": 0,
                    },
                    undefined,
                  ],
                ]
              }
            >
              Yearly
            </Text>
            <Text
              nativeID="subscription-option-1-description"
              selectable={true}
              style={
                [
                  {
                    "color": "#1C1C1E",
                    "fontFamily": "-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 22.4,
                    "textAlign": "left",
                  },
                  {},
                  {
                    "color": "#8E8E93",
                    "fontSize": 12,
                  },
                ]
              }
            >
              Best value
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    accessible={true}
    aria-live="polite"
    id="subscription-error"
    role="alert"
    style={
      {
        "marginTop": 4,
      }
    }
  >
    <Text
      style={
        {
          "color": "#EF4444",
          "fontFamily": "-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif",
          "fontSize": 12,
        }
      }
    >
      Selection required
    </Text>
  </View>
</View>
`;
